--- a/_data/wiki/Item.yml
+++ b/_data/wiki/Item.yml
@@ -239,6 +239,12 @@
 225:
   name: "Fishes of the Ocean Planet"
   description: "Colorful fishes caught in the desolate sea region. They can be exchanged for items in the event shop."
+233:
+  name: "Memory Archive"
+  description: "A storage device that records special memories. It can unlock playable epilogue quests of past events."
+234:
+  name: "Star Shard"
+  description: "A shard of star with mysterious power. Can be exchanged for items at the exchange. Maximum of 4000 pieces can be possessed."
 11033201:
   name: "Procy Santa Doll"
   description: "A gift of warm memories from a crybaby, laughing Santa. You can customize the battle model of Holy Frost Gomeisa"
