--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -522,6 +522,11 @@ Damage is proportional to how many enemy(s) hit:<br>\
 >3 enemies = 15% ATK "
 8211106: "[AI choose target] (extra_cond: no other ally has {{ 24 | status_description }} ) Self {{ 24 | status_description }} "
 
+# Suhail Skevo S2
+1030106: "[base skill] Deal 70% of damage to all enemy /100%<br>\
+[base skill] Apply {{ 18 | status_description }} 1 turn /75%<br>\
+<mark>[When alive] enemies inflicted with Damage-over-Time statuses take +20% more damage. This effect does not stack. /100%</mark>"
+
 # Tabit S3 , passive
 1151103: "[base skill] Deal 180% of damage to target enemy /100% <br>\
 [base skill] (extra_cond: target enemy is killed) Perform 1 more action (only once per turn)/100%"
