--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -37,6 +37,12 @@
 1007203: "[base skill] Deal 100% of damage to all enemies /100%<br>\
 [base skill] Increase the damage of this skill by 20% permanently, up until 160% of damage /100%"
 
+# Borealis Skevo S1
+1082105: "[base skill] Deal 60% of damage to target enemy /100%<br> \
+[base skill] Add 1000 views /100% <br> \
+<mark>Each time ally party generates 5000 View, Symphony Gauge +1. When Symphony Gauge is at max (10 gauges), change Skill 1 to [Ternio Cantus] during own action. <br> \
+[Ternio Cantus] Deal 60% damage to target enemy. After attacking, the allies with the highest and second highest ATK will do a follow-up attack with Skill 1. Reduce Symphony Gauge to 0.</mark>"
+
 # Bygul S2, SK
 1207102: "[base skill] Deal 110% of damage to target enemy /100%<br>\
 [base skill] Apply {{ 12 | status_description }} to target enemy for 1 next attack(s) /100%<br>\
