--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ defaults:
     values:
       layout: chara
       unreleased: false
-      additional_scripts: ["/assets/atlas.min.js"]
+      additional_scripts: ["/assets/atlas.joke.js"]
   - scope:
       type: "events"
     values:
