--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ exclude:
   - "*.pyc"
   - "*.tsv"
   - "assets/atlas.js"
-  - "assets/atlas.joke.js"
+  #- "assets/atlas.joke.js"
   - readme.md
   - node_modules
   - CONTRIBUTING.md
