--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -66,7 +66,7 @@ jobs:
         # Use the GitHub CLI to check team membership
         gh_response=$(gh api \
           --method GET \
-          /orgs/$org_name/teams/$team_slug/members/$pr_author \
+          /orgs/$org_name/teams/$team_slug/memberships/$pr_author \
           --header 'Accept: application/vnd.github.v3+json' \
           --silent || echo "not_found")
 
