--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -55,7 +55,7 @@ jobs:
       run: JEKYLL_ENV=production bundle exec jekyll build --future
 
     - name: Publish (preview)
-      if: github.event_name == 'pull_request' && github.event.label.name == 'committer-approved'
+      if: github.event_name == 'pull_request' && contains(join(github.event.pull_request.labels.*.name, ','), 'committer-approved')
       run: npm run netlify -- deploy --dir=_site --alias ${{ github.ref_name }}
       env:
         NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
