Include more master data

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ e.txt
 *.properties
 /_data/translation/
 /_data/ShopMaster.json
-/_data/EventMaster.json
+#/_data/EventMaster.json
 /_data/MasterDataCatalog.json
 /_charas2/
 /cdn/
