Hero License Association

--- a/_data/wiki/Affiliation.yml
+++ b/_data/wiki/Affiliation.yml
@@ -32,3 +32,5 @@
   en: "Japan Self-Defense Authorities"
 "ギルド・イーグルアイズ":
   en: "Guild Eagle Eyes"
+"ヒーローライセンス協会":
+  en: "Hero License Association"
