--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ e.txt
 /_data/translation/
 /_data/ShopMaster.json
 #/_data/EventMaster.json
+/_data/SalesMaster.json
 /_data/MasterDataCatalog.json
 /_charas2/
 /cdn/
