pub tutorial mission

--- a/_data/wiki/Item.yml
+++ b/_data/wiki/Item.yml
@@ -137,6 +137,9 @@
 66:
   name: "Third Attack Skill Manual"
   description: "Hero will prioritise the use of third skill during auto action if equipped"
+68:
+  name: "Heronium"
+  description: "Unique currency with a time limit used between hero offices. Can be exchanged for items at the exchange."
 74:
   name: "Record Cube Shard"
   description: "Combine 5 shards to form one Record Cube"
