--- a/_data/wiki/Item.yml
+++ b/_data/wiki/Item.yml
@@ -99,7 +99,7 @@
   name: "Friend Point"
   description: "Points required to spin the friend gacha."
 43:
-  name: "☆3 Heart of Sidekick"
+  name: "☆3 Hero Memory Shard"
   description:
 44:
   name: "☆4 Hero Memory Shard"
