skill manual guide

--- a/_data/wiki/Item.yml
+++ b/_data/wiki/Item.yml
@@ -174,7 +174,7 @@
   name: "Skill Manual of Small Awakening Stone"
   description: "Extra chance of earning Small Awakening Stone"
 112:
-  name: "Skill Manual of Medium Awakening Stoneney"
+  name: "Skill Manual of Medium Awakening Stone"
   description: "Extra chance of earning Medium Awakening Stone"
 113:
   name: "Skill Manual of Large Awakening Stone"
