--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -10,14 +10,21 @@ on:
   pull_request_target:
     types: [labeled]
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 jobs:
   build:
     if: "!contains(github.event.head_commit.message, '[ci skip]')"
     runs-on: ubuntu-latest
-    env:
-      MY_SECRET: ${{ github.token }}
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v5
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
@@ -61,18 +68,29 @@ jobs:
         NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
         NETLIFY_AUTH_TOKEN:  ${{ secrets.NETLIFY_AUTH_TOKEN }}
 
-    - name: Publish to Github Pages
+    - name: Change permission
       if: ${{ github.ref == 'refs/heads/master' }}
       run: |
         sudo chmod 777 _site
-        cd _site
-        touch .nojekyll
-        git init
-        git config --local user.email noreply@github.com
-        git config --local user.name lah-wiki-bot
-        git remote add origin https://${GITHUB_ACTOR}:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git
-        git checkout -b gh-pages
-        git add --all
-        git commit -m "Deploy to Github pages"
-        git push origin gh-pages -f
-        echo "Deploy to Github Pages complete."
+
+    - name: Setup Pages
+      if: ${{ github.ref == 'refs/heads/master' }}
+      uses: actions/configure-pages@v5
+
+    - name: Upload artifact
+      if: ${{ github.ref == 'refs/heads/master' }}
+      uses: actions/upload-pages-artifact@v4
+      with:
+        path: './_site'
+
+  deploy:
+    if: ${{ github.ref == 'refs/heads/master' }}
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
