--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
+  "type": "module",
   "devDependencies": {
     "@11ty/eleventy": "^3.1.2",
     "netlify-cli": "^23.9.5"
   },
   "scripts": {
-    "netlify": "netlify"
+    "netlify": "netlify",
+    "dev": "eleventy --serve --output _site2"
   }
 }
