--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
+  "type": "module",
   "devDependencies": {
+    "@11ty/eleventy": "^3.1.2",
     "netlify-cli": "^23.9.5"
   },
   "scripts": {
-    "netlify": "netlify"
+    "netlify": "netlify",
+    "dev": "NODE_OPTIONS=--max-old-space-size=8192 eleventy --serve --output _site2",
+    "build": "NODE_OPTIONS=--max-old-space-size=8192 DEBUG=Eleventy* eleventy --output _site2"
   }
 }
