--- a/_data/wiki/VoiceActor.yml
+++ b/_data/wiki/VoiceActor.yml
@@ -47,7 +47,7 @@
 "戸板優衣":
   en: "Yui Toita"
 "後藤ヒロキ":
-  en: "Hiroki Goto"
+  en: "Hiroki Gotō"
 "置鮎龍太郎":
   en: "Ryōtarō Okiayu"
 "ならはしみき":
@@ -120,5 +120,35 @@
   en: "Kōki Miyata"
 "平川大輔":
   en: "Daisuke Hirakawa"
+"三瓶由布子":
+  en: "Yūko Sanpei"
+"坂泰斗":
+  en: "Taito Ban"
+"後藤光祐":
+  en: "Kōsuke Gotō"
+"関俊彦":
+  en: "Toshihiko Seki"
+"楠見尚己":
+  en: "Naomi Kusumi"
 "佐藤拓也":
   en: "Takuya Satō"
+"石上静香":
+  en: "Shizuka Ishigami"
+"加瀬康之":
+  en: "Yasuyuki Kase"
+"平林剛":
+  en: "Takeshi Hirabayashi"
+"小山剛志":
+  en: "Tsuyoshi Koyama"
+"山下誠一郎":
+  en: "Seiichirō Yamashita"
+"山路和弘":
+  en: "Kazuhiro Yamaji"
+"狩野翔":
+  en: "Shō Karino"
+"中井和哉":
+  en: "Kazuya Nakai"
+"畠中祐":
+  en: "Tasuku Hatanaka"
+"伊丸岡篤":
+  en: "Atsushi Imaruoka"
