--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -11,6 +11,15 @@
 8001106: ""
 8001107: "[when invoker's attack causes damage to enemy] Apply {{ 1001101 | status_description }} to self /100%"
 
+# Alchiba Skevo S2
+
+1026206: "Deal 40% damage to a single enemy 2-4 times <br> \
+From the second hit onward, gain Combo +1 <br> \
+Additional hit chance after 2nd hit = 60%(3rd hit) & 30%(4th hit) <br> \
+<mark>[Passive] For every 20,000 View spent by allies, gain +1 bullet (up to a maximum of 3) <br> \
+At the start of your action, consume all bullets to deal 40% damage (+1 combo count) to random enemies equal to the number of bullets <br> \
+After the effect activates, perform another action </mark>"
+
 # Alphecca variant S1
 1062201: "[base skill] Deal 80% of damage to target enemy /100% "
 
