--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -46,6 +46,13 @@ After the effect activates, perform another action </mark>"
 1007203: "[base skill] Deal 100% of damage to all enemies /100%<br>\
 [base skill] Increase the damage of this skill by 20% permanently, up until 160% of damage /100%"
 
+# Barrel 1st variant Skevo S3
+
+1007207: "[base skill] Deal 100% of damage to all enemies /100% <br> \
+<mark> Increase damage based on the current gauge amount (+20% per gauge, up to a maximum of 220%) <br> \
+If gauge >= 4 when the skill is activated, reduce gauge to 3.
+After the skill is used, increase own gauge by 1. </mark>"
+
 # Borealis Skevo S1
 1082105: "[base skill] Deal 60% of damage to target enemy /100%<br> \
 [base skill] Add 3000 views /100% <br> \
