Test Update Illustrator

--- a/_data/wiki/Illustrator.yml
+++ b/_data/wiki/Illustrator.yml
@@ -63,7 +63,7 @@
 "リコセ":
   en: "Rikose"
 "ふぁい":
-  en: "Fai/Fai-Storage"
+  en: "Fai/@fai-storage"
 "飛波":
   en: "Hinami"
 "ムドリ":
@@ -72,3 +72,4 @@
   en: "gozu_farm"
 "そーちゃん":
   en: "So-chan/Sawch_cls"
+
