--- a/_data/wiki/Illustrator.yml
+++ b/_data/wiki/Illustrator.yml
@@ -1,75 +1,102 @@
 "朱交赤成":
-  en: "Shukou Akanaru"
+  en: "Shukou Akanaru/@syukouakanaru"
 "1boshi":
-  en: "1boshi"
+  en: "1boshi/@ichiboshi49_k"
 "ダイエクスト":
-  en: "DAI-XT."
+  en: "DAI-XT/@Hijiki_DaiXt"
 "おーくす":
-  en: "Oaks"
+  en: "Oaks/@oaks16"
 "樹下次郎":
-  en: "Kinoshita Jiroh"
+  en: "Kinoshita Jiroh/@kinoshita_jiroh"
 "GomTang":
-  en: "GomTang"
+  en: "GomTang/@GomTang_P"
 "めんスケ":
-  en: "Mensuke"
+  en: "Mensuke/@mennsuke123"
 "ぷらす野 昆布":
-  en: "Plusno Konbu"
+  en: "Plusno Konbu/@konbu_3333"
 "一十":
-  en: "Mentaiko/Itto"
+  en: "Mentaiko/Itto/@ittorasii"
 "steelwire/鉄線":
-  en: "Steelwire"
+  en: "Steelwire/@_steelwire"
 "きしぐま":
-  en: "Xigma"
+  en: "Xigma/@xigma_t56"
 "ずじ":
-  en: "Zhuzi"
+  en: "Zhuzi/@zhuzi_k"
 "黒ねずみいぬ":
-  en: "Kuronezumiinu"
+  en: "Kuronezumiinu/@96nezumi12"
 "竹本嵐":
-  en: "Takemoto Arashi"
+  en: "Takemoto Arashi/@arashi_takemoto"
 "BomBom":
-  en: "BomBom"
+  en: "BomBom/@2bombom"
 "うさ餅大福":
-  en: "Usamochi Daifuku"
+  en: "Usamochi Daifuku/@daihukudokoro"
 "藤三郎":
-  en: "TOOMIRO"
+  en: "TOOMIRO/@TOOMIRO"
 "やきそばおおもり":
-  en: "Yakisoba Oomori"
+  en: "Yakisoba Oomori/@yksb2"
 "英":
-  en: "Ei/Eikichi"
+  en: "Hide/@mknskhnbs"
 "ふぐり":
-  en: "Fuguri/Omochi Kuitai"
+  en: "Fuguri/@omochi_kuitai"
 "ぱりぽい":
-  en: "PariPoi"
+  en: "PariPoi/@Dragoooon1223"
 "タルトル":
-  en: "Tarutoru"
+  en: "Tarutoru/@lcebanon"
 "灰濁クロム":
-  en: "Gray Chrome/BK_Mita"
+  en: "Haida Chrome/BK_Mita/@Haida_chrom"
 "うすくちぽてち":
-  en: "Usukuchi Potechi"
+  en: "Usukuchi Potechi/@dyzd1"
 "牟草るふ":
-  en: "Musou Luf"
+  en: "Musou Luf/@musou_luf"
 "せいけー":
-  en: "Seikei"
+  en: "Seikei/@seikeikei2015"
 "墓地":
-  en: "Bochi/Fearfac666"
+  en: "Bochi/@fearfac666"
 "yow":
-  en: "Yow"
+  en: "Yow/@vish4ow"
 "RybiOK":
-  en: "RybiOK"
+  en: "RybiOK/@rybiok"
 "沃":
-  en: "Vorusu"
+  en: "Vorusu/@VorusuArts2"
 "園見 喝":
-  en: "Katsu Sonomi/Omisokatu0141"
+  en: "Katsu Sonomi/@omisokatu0141"
 "リコセ":
-  en: "Rikose"
+  en: "Rikose/@rikose"
 "ふぁい":
   en: "Fai/@fai-storage"
 "飛波":
-  en: "Hinami"
+  en: "Hinami/@hinami0506"
 "ムドリ":
-  en: "Mudori/Neilos0526"
+  en: "Mudori/@Neilos0526"
 "かうべる牛頭夫":
-  en: "gozu_farm"
+  en: "Cowbell Gozuo/@gozu_farm"
 "そーちゃん":
-  en: "So-chan/Sawch_cls"
-
+  en: "Saw-chan/@Sawch_Cls"
+"YED":
+  en: "YED/@yedsilent"
+"Syukapong":
+  en: "Syukapong/@syukapong"
+"wasp":
+  en: "Wasp/@anthyutena"
+"G◎NDOM":
+  en: "G◎NDOM/@cpk28_"
+"遊茶":
+  en: "Yusa/@usa_kotobuki"
+"布哥-BOOG":
+  en: "布哥-BOOG/@BoogBogex"
+"すあまる":
+  en: "Suamaru/@suamaruo8o8"
+"nullQ":
+  en: "NullQ/@nullQllun"
+"ちぼ":
+  en: "Chivo/@chivo0403"
+"ながべ":
+  en: "Nagabe/@mucknagabe"
+"阿武そるん":
+  en: "ABSOL/@dkqthf"
+"カヂロ":
+  en: "Kadiro/@kadikadisake"
+"日間":
+  en: "Hima/@hima0jin"
+"相音きう":
+  en: "Aion Kiu/@aion_kiu"
