--- a/_data/wiki/Illustrator.yml
+++ b/_data/wiki/Illustrator.yml
@@ -83,7 +83,7 @@
 "遊茶":
   en: "Yusa/@usa_kotobuki"
 "布哥-BOOG":
-  en: "布哥-BOOG/@BoogBogex"
+  en: "BOOG/@BoogBogex"
 "すあまる":
   en: "Suamaru/@suamaruo8o8"
 "nullQ":
@@ -100,3 +100,4 @@
   en: "Hima/@hima0jin"
 "相音きう":
   en: "Aion Kiu/@aion_kiu"
+
