--- a/_data/wiki/Illustrator.yml
+++ b/_data/wiki/Illustrator.yml
@@ -3,7 +3,7 @@
 "1boshi":
   en: "1boshi/@ichiboshi49_k"
 "ダイエクスト":
-  en: "DAI-XT/@Hijiki_DaiXt"
+  en: "DAI-XT. /@Hijiki_DaiXt"
 "おーくす":
   en: "Oaks/@oaks16"
 "樹下次郎":
@@ -29,11 +29,11 @@
 "BomBom":
   en: "BomBom/@2bombom"
 "うさ餅大福":
-  en: "Usamochi Daifuku/@daihukudokoro"
+  en: "Usamochi Daihuku/@daihukudokoro"
 "藤三郎":
   en: "TOOMIRO/@TOOMIRO"
 "やきそばおおもり":
-  en: "Yakisoba Oomori/@yksb2"
+  en: "Yakisobaoomori/@yksb2"
 "英":
   en: "Hide/@mknskhnbs"
 "ふぐり":
@@ -67,7 +67,7 @@
 "飛波":
   en: "Hinami/@hinami0506"
 "ムドリ":
-  en: "Mudori/@Neilos0526"
+  en: "Neilos/@Neilos0526"
 "かうべる牛頭夫":
   en: "Cowbell Gozuo/@gozu_farm"
 "そーちゃん":
@@ -83,7 +83,7 @@
 "遊茶":
   en: "Yusa/@usa_kotobuki"
 "布哥-BOOG":
-  en: "BOOG/@BoogBogex"
+  en: "BoogBogex/@BoogBogex"
 "すあまる":
   en: "Suamaru/@suamaruo8o8"
 "nullQ":
@@ -100,4 +100,5 @@
   en: "Hima/@hima0jin"
 "相音きう":
   en: "Aion Kiu/@aion_kiu"
+
 
