--- a/_data/wiki/Illustrator.yml
+++ b/_data/wiki/Illustrator.yml
@@ -1,104 +1,155 @@
 "朱交赤成":
-  en: "Shukou Akanaru/@syukouakanaru"
+  en: "Shukou Akanaru"
+  twitter: "syukouakanaru"
 "1boshi":
-  en: "1boshi/@ichiboshi49_k"
+  en: "1boshi"
+  twitter: "ichiboshi49_k"
 "ダイエクスト":
-  en: "DAI-XT. /@Hijiki_DaiXt"
+  en: "DAI-XT."
+  twitter: "Hijiki_DaiXt"
 "おーくす":
-  en: "Oaks/@oaks16"
+  en: "Oaks"
+  twitter: "oaks16"
 "樹下次郎":
-  en: "Kinoshita Jiroh/@kinoshita_jiroh"
+  en: "Kinoshita Jiroh"
+  twitter: "kinoshita_jiroh"
 "GomTang":
-  en: "GomTang/@GomTang_P"
+  en: "GomTang"
+  twitter: "GomTang_P"
 "めんスケ":
-  en: "Mensuke/@mennsuke123"
+  en: "Mensuke"
+  twitter: "mennsuke123"
 "ぷらす野 昆布":
-  en: "Plusno Konbu/@konbu_3333"
+  en: "Plusno Konbu"
+  twitter: "konbu_3333"
 "一十":
-  en: "Mentaiko/Itto/@ittorasii"
+  en: "Mentaiko/Itto"
+  twitter: "ittorasii"
 "steelwire/鉄線":
-  en: "Steelwire/@_steelwire"
+  en: "Steelwire"
+  twitter: "_steelwire"
 "きしぐま":
-  en: "Xigma/@xigma_t56"
+  en: "Xigma"
+  twitter: "xigma_t56"
 "ずじ":
-  en: "Zhuzi/@zhuzi_k"
+  en: "Zhuzi"
+  twitter: "zhuzi_k"
 "黒ねずみいぬ":
-  en: "Kuronezumiinu/@96nezumi12"
+  en: "Kuronezumiinu"
+  twitter: "96nezumi12"
 "竹本嵐":
-  en: "Takemoto Arashi/@arashi_takemoto"
+  en: "Takemoto Arashi"
+  twitter: "arashi_takemoto"
 "BomBom":
-  en: "BomBom/@2bombom"
+  en: "BomBom"
+  twitter: "2bombom"
 "うさ餅大福":
-  en: "Usamochi Daihuku/@daihukudokoro"
+  en: "Usamochi Daihuku"
+  twitter: "daihukudokoro"
 "藤三郎":
-  en: "TOOMIRO/@TOOMIRO"
+  en: "TOOMIRO"
+  twitter: "TOOMIRO"
 "やきそばおおもり":
-  en: "Yakisobaoomori/@yksb2"
+  en: "Yakisobaoomori"
+  twitter: "yksb2"
 "英":
-  en: "Hide/@mknskhnbs"
+  en: "Hide"
+  twitter: "mknskhnbs"
 "ふぐり":
-  en: "Fuguri/@omochi_kuitai"
+  en: "Fuguri"
+  twitter: "omochi_kuitai"
 "ぱりぽい":
-  en: "PariPoi/@Dragoooon1223"
+  en: "PariPoi"
+  twitter: "Dragoooon1223"
 "タルトル":
-  en: "Tarutoru/@lcebanon"
+  en: "Tarutoru"
+  twitter: "lcebanon"
 "灰濁クロム":
-  en: "Haida Chrome/BK_Mita/@Haida_chrom"
+  en: "Haida Chrome/BK_Mita"
+  twitter: "Haida_chrom"
 "うすくちぽてち":
-  en: "Usukuchi Potechi/@dyzd1"
+  en: "Usukuchi Potechi"
+  twitter: "dyzd1"
 "牟草るふ":
-  en: "Musou Luf/@musou_luf"
+  en: "Musou Luf"
+  twitter: "musou_luf"
 "せいけー":
-  en: "Seikei/@seikeikei2015"
+  en: "Seikei"
+  twitter: "seikeikei2015"
 "墓地":
-  en: "Bochi/@fearfac666"
+  en: "Bochi"
+  twitter: "fearfac666"
 "yow":
-  en: "Yow/@vish4ow"
+  en: "Yow"
+  twitter: "vish4ow"
 "RybiOK":
-  en: "RybiOK/@rybiok"
+  en: "RybiOK"
+  twitter: "rybiok"
 "沃":
-  en: "Vorusu/@VorusuArts2"
+  en: "Vorusu"
+  twitter: "VorusuArts2"
 "園見 喝":
-  en: "Katsu Sonomi/@omisokatu0141"
+  en: "Katsu Sonomi"
+  twitter: "omisokatu0141"
 "リコセ":
-  en: "Rikose/@rikose"
+  en: "Rikose"
+  twitter: "rikose"
 "ふぁい":
-  en: "Fai/@fai-storage"
+  en: "Fai"
+  twitter: "fai-storage"
 "飛波":
-  en: "Hinami/@hinami0506"
+  en: "Hinami"
+  twitter: "hinami0506"
 "ムドリ":
-  en: "Neilos/@Neilos0526"
+  en: "Neilos"
+  twitter: "Neilos0526"
 "かうべる牛頭夫":
-  en: "Cowbell Gozuo/@gozu_farm"
+  en: "Cowbell Gozuo"
+  twitter: "gozu_farm"
 "そーちゃん":
-  en: "Saw-chan/@Sawch_Cls"
+  en: "Saw-chan"
+  twitter: "Sawch_Cls"
 "YED":
-  en: "YED/@yedsilent"
+  en: "YED"
+  twitter: "yedsilent"
 "Syukapong":
-  en: "Syukapong/@syukapong"
+  en: "Syukapong"
+  twitter: "syukapong"
 "wasp":
-  en: "Wasp/@anthyutena"
+  en: "Wasp"
+  twitter: "anthyutena"
 "G◎NDOM":
-  en: "G◎NDOM/@cpk28_"
+  en: "G◎NDOM"
+  twitter: "cpk28_"
 "遊茶":
-  en: "Yusa/@usa_kotobuki"
+  en: "Yusa"
+  twitter: "usa_kotobuki"
 "布哥-BOOG":
-  en: "BoogBogex/@BoogBogex"
+  en: "BoogBogex"
+  twitter: "BoogBogex"
 "すあまる":
-  en: "Suamaru/@suamaruo8o8"
+  en: "Suamaru"
+  twitter: "suamaruo8o8"
 "nullQ":
-  en: "NullQ/@nullQllun"
+  en: "NullQ"
+  twitter: "nullQllun"
 "ちぼ":
-  en: "Chivo/@chivo0403"
+  en: "Chivo"
+  twitter: "chivo0403"
 "ながべ":
-  en: "Nagabe/@mucknagabe"
+  en: "Nagabe"
+  twitter: "mucknagabe"
 "阿武そるん":
-  en: "ABSOL/@dkqthf"
+  en: "ABSOL"
+  twitter: "dkqthf"
 "カヂロ":
-  en: "Kadiro/@kadikadisake"
+  en: "Kadiro"
+  twitter: "kadikadisake"
 "日間":
-  en: "Hima/@hima0jin"
+  en: "Hima"
+  twitter: "hima0jin"
 "相音きう":
-  en: "Aion Kiu/@aion_kiu"
+  en: "Aion Kiu"
+  twitter: "aion_kiu"
 
 
