--- a/_data/wiki/Illustrator.yml
+++ b/_data/wiki/Illustrator.yml
@@ -1,39 +1,49 @@
 "朱交赤成":
   en: "Shukou Akanaru"
   twitter: "syukouakanaru"
+  pixiv: 660678
 "1boshi":
   en: "1boshi"
   twitter: "ichiboshi49_k"
+  pixiv: 516285
 "ダイエクスト":
   en: "DAI-XT."
   twitter: "Hijiki_DaiXt"
+  pixiv: 901789
 "おーくす":
   en: "Oaks"
   twitter: "oaks16"
 "樹下次郎":
   en: "Kinoshita Jiroh"
   twitter: "kinoshita_jiroh"
+  pixiv: 327835
 "GomTang":
   en: "GomTang"
   twitter: "GomTang_P"
 "めんスケ":
   en: "Mensuke"
   twitter: "mennsuke123"
+  pixiv: 6150188
 "ぷらす野 昆布":
   en: "Plusno Konbu"
   twitter: "konbu_3333"
+  pixiv: 77045
 "一十":
   en: "Mentaiko/Itto"
   twitter: "ittorasii"
+  pixiv: 371585
 "steelwire/鉄線":
   en: "Steelwire"
   twitter: "_steelwire"
+  pixiv: 68813
 "きしぐま":
   en: "Xigma"
   twitter: "xigma_t56"
+  pixiv: 1105139
 "ずじ":
   en: "Zhuzi"
   twitter: "zhuzi_k"
+  pixiv: 19585
 "黒ねずみいぬ":
   en: "Kuronezumiinu"
   twitter: "96nezumi12"
@@ -43,63 +53,81 @@
 "BomBom":
   en: "BomBom"
   twitter: "2bombom"
+  pixiv: 9839175
 "うさ餅大福":
   en: "Usamochi Daihuku"
   twitter: "daihukudokoro"
+  pixiv: 1556182
 "藤三郎":
   en: "TOOMIRO"
   twitter: "TOOMIRO"
+  pixiv: 44508
 "やきそばおおもり":
   en: "Yakisobaoomori"
   twitter: "yksb2"
 "英":
   en: "Hide"
   twitter: "mknskhnbs"
+  pixiv: 4778062
 "ふぐり":
   en: "Fuguri"
   twitter: "omochi_kuitai"
+  pixiv: 53527129
 "ぱりぽい":
   en: "PariPoi"
   twitter: "Dragoooon1223"
+  pixiv: 3364797
 "タルトル":
   en: "Tarutoru"
   twitter: "lcebanon"
+  pixiv: 2154012
 "灰濁クロム":
   en: "Haida Chrome/BK_Mita"
   twitter: "Haida_chrom"
+  pixiv: 2154012
 "うすくちぽてち":
   en: "Usukuchi Potechi"
   twitter: "dyzd1"
+  pixiv: 7316487
 "牟草るふ":
   en: "Musou Luf"
   twitter: "musou_luf"
+  pixiv: 16059429
 "せいけー":
   en: "Seikei"
   twitter: "seikeikei2015"
+  pixiv: 12071587
 "墓地":
   en: "Bochi"
   twitter: "fearfac666"
+  pixiv: 12201406
 "yow":
   en: "Yow"
   twitter: "vish4ow"
+  pixiv: 60058
 "RybiOK":
   en: "RybiOK"
   twitter: "rybiok"
+  pixiv: 806110
 "沃":
   en: "Vorusu"
   twitter: "VorusuArts2"
 "園見 喝":
   en: "Katsu Sonomi"
   twitter: "omisokatu0141"
+  pixiv: 4407408
 "リコセ":
   en: "Rikose"
   twitter: "rikose"
+  pixiv: 47785
 "ふぁい":
   en: "Fai"
   twitter: "fai-storage"
+  pixiv: 440063
 "飛波":
   en: "Hinami"
   twitter: "hinami0506"
+  pixiv: 365840
 "ムドリ":
   en: "Neilos"
   twitter: "Neilos0526"
@@ -109,21 +137,27 @@
 "そーちゃん":
   en: "Saw-chan"
   twitter: "Sawch_Cls"
+  pixiv: 4118259
 "YED":
   en: "YED"
   twitter: "yedsilent"
+  pixiv: 47241538
 "Syukapong":
   en: "Syukapong"
   twitter: "syukapong"
+  pixiv: 180660678
 "wasp":
   en: "Wasp"
   twitter: "anthyutena"
+  pixiv: 17473384
 "G◎NDOM":
   en: "G◎NDOM"
   twitter: "cpk28_"
+  pixiv: 20999794
 "遊茶":
   en: "Yusa"
   twitter: "usa_kotobuki"
+  pixiv: 541614
 "布哥-BOOG":
   en: "BoogBogex"
   twitter: "BoogBogex"
@@ -133,23 +167,29 @@
 "nullQ":
   en: "NullQ"
   twitter: "nullQllun"
+  pixiv: 73530687
 "ちぼ":
   en: "Chivo"
   twitter: "chivo0403"
 "ながべ":
   en: "Nagabe"
   twitter: "mucknagabe"
+  pixiv: 12201406
 "阿武そるん":
   en: "ABSOL"
   twitter: "dkqthf"
+  pixiv: 774714
 "カヂロ":
   en: "Kadiro"
   twitter: "kadikadisake"
+  pixiv: 74033523
 "日間":
   en: "Hima"
   twitter: "hima0jin"
+  pixiv: 1738250
 "相音きう":
   en: "Aion Kiu"
   twitter: "aion_kiu"
+  pixiv: 770874
 
 
