--- a/_data/wiki/VoiceActor.yml
+++ b/_data/wiki/VoiceActor.yml
@@ -1,31 +1,48 @@
 "保坂俊行":
   en: "Toshiyuki Hosaka"
+  twitter: "toshi_hosaka"
+  talent: https://upandups.jp/voice_actors/hosaka/
 "熊本健太":
   en: "Kenta Kumamoto"
+  twitter: "KENTA_KUMAMOTO"
 "笠間淳":
   en: "Jun Kasama"
+  twitter: "ksm_jun"
+  talent: https://haikyo.co.jp/profile/profile.php?ActorID=12608
 "山口眞弓":
   en: "Mayumi Yamaguchi"
+  talent: https://aksent.co.jp/profile/yamaguchi_mayumi/
 "乃村健次":
   en: "Kenji Nomura"
+  twitter: "nomukendono"
+  talent: https://aksent.co.jp/profile/nomura_kenji/
 "よねざわたかし":
   en: "Takashi Yonezawa"
+  twitter: "tkc_yone"
+  talent: https://upandups.jp/voice_actors/yonezawa/
 "大浪嘉仁":
   en: "Yoshihito Ōnami"
+  twitter: "oonami1234"
 "夏怜":
   en: "Karen"
+  twitter: "karen_oui"
+  talent: https://upandups.jp/voice_actors/karen/
 "堀内賢雄":
   en: "Kenyū Horiuchi"
+  talent: https://kenyu-office.com/horiuchikenyu/
 "尾形雅宏":
   en: "Masahiro Ogata"
 "樹元オリエ":
   en: "Orie Kimoto"
+  twitter: "oriepenguin"
 "小林由美子":
   en: "Yumiko Kobayashi"
 "大友龍三郎":
   en: "Ryūzaburō Ōtomo"
 "内匠靖明":
   en: "Yasuaki Takumi"
+  twitter: "takumi_yasuaki"
+  talent: https://haikyo.co.jp/profile/profile.php?ActorID=12211
 "三宅健太":
   en: "Kenta Miyake"
 "山口勝平":
@@ -142,6 +159,8 @@
   en: "Tsuyoshi Koyama"
 "山下誠一郎":
   en: "Seiichirō Yamashita"
+  twitter: "seichiro0521"
+  talent: https://osawa-inc.co.jp/men/yamashitaseiichiro/
 "山路和弘":
   en: "Kazuhiro Yamaji"
 "狩野翔":
@@ -152,3 +171,4 @@
   en: "Tasuku Hatanaka"
 "伊丸岡篤":
   en: "Atsushi Imaruoka"
+
