--- a/_data/wiki/VoiceActor.yml
+++ b/_data/wiki/VoiceActor.yml
@@ -45,10 +45,15 @@
   talent: https://haikyo.co.jp/profile/profile.php?ActorID=12211
 "三宅健太":
   en: "Kenta Miyake"
+  twitter: "miyake_ktrm"
+  talent: https://www.81produce.co.jp/dcms_plusdb/index.php/item?cell003=%E3%81%BE%E8%A1%8C&cell029=%E7%94%B7%E6%80%A7&keyword=&cell028=&cell004=&name=%E4%B8%89%E5%AE%85%E3%80%80%E5%81%A5%E5%A4%AA&id=120&label=1
 "山口勝平":
   en: "Kappei Yamaguchi"
+  twitter: "ENma_Dororon"
 "中谷一博":
   en: "Kazuhiro Nakaya"
+  twitter: "kazupiero07"
+  talent: https://intention-k.com/profile/kazuhiro_nakaya
 "成田剣":
   en: "Ken Narita"
 "伊瀬茉莉也":
@@ -171,4 +176,5 @@
   en: "Tasuku Hatanaka"
 "伊丸岡篤":
   en: "Atsushi Imaruoka"
+
 
