--- a/_data/wiki/VoiceActor.yml
+++ b/_data/wiki/VoiceActor.yml
@@ -50,6 +50,7 @@
 "山口勝平":
   en: "Kappei Yamaguchi"
   twitter: "ENma_Dororon"
+  talent: https://go-coo.com/profile/kappei.html
 "中谷一博":
   en: "Kazuhiro Nakaya"
   twitter: "kazupiero07"
@@ -58,24 +59,41 @@
   en: "Ken Narita"
 "伊瀬茉莉也":
   en: "Mariya Ise"
+  twitter: "Ma_ri_ya_i"
+  talent: https://across-ent.com/voice_actor/detail.html?id=110
 "稲田徹":
   en: "Tetsu Inada"
+  twitter: "trombe_boss"
+  talent: https://www.aoni.co.jp/search/inada-tetsu.html
 "岩永悠平":
   en: "Yūhei Iwanaga"
+  twitter: "iwa_naga_0316"
+  talent: https://upandups.jp/voice_actors/iwanaga/
 "てらそままさき":
   en: "Masaki Terasoma"
+  twitter: "masaki_terasoma"
+  talent: https://mausu.net/talent/terasoma-masaki.html
 "天野ユウ":
   en: "Yū Amano"
+  twitter: "yuuamano"
+  talent: https://go-coo.com/contents/profile/archives/4
 "戸板優衣":
   en: "Yui Toita"
+  twitter: "ui_yui_0831"
+  talent: https://upandups.jp/voice_actors/toita/
 "後藤ヒロキ":
   en: "Hiroki Gotō"
+  twitter: "gotohiro8bit"
 "置鮎龍太郎":
   en: "Ryōtarō Okiayu"
+  twitter: "chikichikiko"
+  talent: https://www.aoni.co.jp/search/okiayu-ryotaro.html
 "ならはしみき":
   en: "Miki Narahashi"
+  talent: https://www.artsvision.co.jp/talent/14331/
 "福山潤":
   en: "Jun Fukuyama"
+  twitter: "black_fukuyama"
 "有元勇輝":
   en: "Yūki Arimoto"
 "増元拓也":
@@ -176,5 +194,6 @@
   en: "Tasuku Hatanaka"
 "伊丸岡篤":
   en: "Atsushi Imaruoka"
+
 
 
