--- a/_data/wiki/VoiceActor.yml
+++ b/_data/wiki/VoiceActor.yml
@@ -96,52 +96,93 @@
   twitter: "black_fukuyama"
 "有元勇輝":
   en: "Yūki Arimoto"
+  twitter: "ariyou0306"
+  talent: https://power-rise.jp/talent_men/arimoto_yuki/
 "増元拓也":
   en: "Takuya Masumoto"
+  twitter: "maruko_q"
+  talent: https://www.kenproduction.co.jp/talent/104
 "野島健児":
   en: "Kenji Nojima"
+  twitter: "nojimakenji"
+  talent: https://www.aoni.co.jp/search/nojima-kenji.html
 "幸田承":
   en: "Shō Kōda"
+  twitter: "_uketama"
 "宮本崇弘":
   en: "Takahiro Miyamoto"
+  twitter: "miyammtto"
+  talent: https://www.aoni.co.jp/search/miyamoto-takahiro.html
 "千葉一伸":
   en: "Isshin Chiba"
+  twitter: "isshinchiba1"
+  talent: https://www.artsvision.co.jp/talent/14359/
 "速水奨":
   en: "Show Hayami" 
+  twitter: "show_ism"
+  talent: https://rushstyle.net/talent/show_hayami/
 "平田広明":
   en: "Hiroaki Hirata" 
+  twitter: "hiratapro"
 "野上翔":
   en: "Shō Nogami" 
+  talent: https://www.vims.co.jp/talent/356/
 "小山力也":
   en: "Rikiya Koyama" 
+  twitter: "rikiyakoyama3"
 "福西勝也":
   en: "Masaya Fukunishi" 
+  twitter: "MasayaFukunishi"
+  talent: https://www.kenproduction.co.jp/talent/182
 "檜山修之":
   en: "Nobuyuki Hiyama" 
+  twitter: "NOBUKIHIYAMAY08"
+  talent: https://www.artsvision.co.jp/talent/14315/
 "音代雪里":
   en: "Kiyori Otoshiro" 
+  twitter: "KiyoriOtoshiro"
+  talent: https://upandups.jp/voice_actors/otoshiro/
 "安元洋貴":
   en: "Hiroki Yasumoto" 
+  twitter: "__yasumoto__"
+  talent: https://sigma7.co.jp/actors/yasumoto_hiroki
 "玉木雅士":
   en: "Masashi Tamaki" 
+  twitter: "masashitamaki"
+  talent: https://osawa-inc.co.jp/men/tamakimasashi/
 "竹内良太":
   en: "Ryōta Takeuchi" 
+  twitter: "takeuti_ryota"
+  talent: https://www.aoni.co.jp/search/takeuchi-ryota.html
 "子安武人":
   en: "Takehito Koyasu" 
-"折笠愛 ":
-  en: "Ai Orikasa" 
+  talent: https://tsf-official.com/talent/takehito-koyasu/
+"折笠愛":
+  en: "Ai Orikasa"
+  twitter: "AIaxlone"
+  talent: https://axl-one.com/talent/orikasa.html
 "かぬか光明":
   en: "Mitsuaki Kanuka" 
+  twitter: "nukakanu"
+  talent: https://kenyu-office.com/kanukamitsuaki/
 "阪口大助":
   en: "Daisuke Sakaguchi" 
+  twitter: "daisukemarumaru"
+  talent: https://www.aoni.co.jp/search/sakaguchi-daisuke.html
 "宮本充":
   en: "Mitsuru Miyamoto" 
+  talent: https://www.theatercompany-subaru.com/member/male/008_miyamotomitsuru.html
 "林勇":
   en: "Yū Hayashi" 
+  talent: https://www.kenproduction.co.jp/talent/58
 "白熊寛嗣":
   en: "Hiroshi Shirokuma" 
+  twitter: "whitebear_info"
+  talent: https://pro-baobab.jp/actor/%E7%99%BD%E7%86%8A-%E5%AF%9B%E5%97%A3/
 "志村知幸":
   en: "Tomoyuki Shimura" 
+  twitter: "oyayubiseijin"
+  talent: https://www.kenproduction.co.jp/talent/44
 "浦和めぐみ":
   en: "Megumi Urawa" 
 "小西克幸":
@@ -194,6 +235,5 @@
   en: "Tasuku Hatanaka"
 "伊丸岡篤":
   en: "Atsushi Imaruoka"
-
 
 
