--- a/_data/wiki/VoiceActor.yml
+++ b/_data/wiki/VoiceActor.yml
@@ -235,5 +235,9 @@
   en: "Tasuku Hatanaka"
 "伊丸岡篤":
   en: "Atsushi Imaruoka"
+"くまいもとこ":
+  en: "Motoko Kumai"
+  twitter: "motorsports0908"
+  talent: https://www.81produce.co.jp/dcms_plusdb/index.php/item?cell003=%E3%81%8B%E8%A1%8C&label=1&page=2&cell004=&name=%E3%81%8F%E3%81%BE%E3%81%84%E3%80%80%E3%82%82%E3%81%A8%E3%81%93&id=193
 
 
